update about me page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>angelchaple.io</title>
   </head>
   <body>
-    <div class="blip"></div>
+    <a><div class="blip"></div></a>
     <section class="main_header">
       <h1>Access Granted: Welcome to the Mainframe Innovation</h1>
       <a href="#about_section"><h3 class="action_button">INIT</h3></a>
@@ -23,7 +23,33 @@
         </p>
       </div>
       <div class="main_header_two">
-        
+        <aside class="about_me_aside_element">
+          <p>
+            I am a determined self-taught web developer and full-stack
+            development student with a strong passion for software security and
+            open-source technologies. My journey into technology began with a
+            desire to expand my career opportunities and make a meaningful
+            impact in the field of software engineering. With seven years of
+            experience as a Spanish Interpreter at Atrium Health, I have
+            developed exceptional communication, analytical, and problem-solving
+            skills—qualities that seamlessly translate into my work in tech. My
+            background in healthcare has given me a unique perspective on
+            user-centric solutions, inspiring me to create software that is both
+            functional and accessible.
+            <br />
+            <br />
+            Balancing a full-time job with my studies, I demonstrate discipline
+            and perseverance, continuously pushing myself to learn new
+            programming languages, frameworks, and tools. Focused on building a
+            career in IT, I am currently preparing for a transition into
+            technical support and administrative roles within the healthcare
+            system, leveraging my existing expertise while strengthening my
+            technical foundation. My journey reflects a commitment to growth,
+            adaptability, and excellence as I work toward building a successful
+            career in technology.
+          </p>
+        </aside>
+        <img src="/assets/web-programming.png">
       </div>
     </section>
   </body>
